[package]
name = "SysMetricMiner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.15.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = "2.3.1"
futures-executor = "0.3.8"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4"

